chatroom ui added

--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,32 @@
   .icon-block .material-icons {
       font-size: inherit;
   }
+  .chatroom {
+    height: 50%;
+    width: 50%;
+    margin: 2% 20% 2% 20%;
+    padding: 5%;
+    border-radius: 0.1em;
+  }
+  .chatroom-title{
+      background: var(--title);
+      margin: 0;
+      padding: 1rem;
+  }
+  .chatroom-messages{
+      background: var(--primary);
+      margin: 0;
+  }
+  .chatroom-submit-message{
+      background: var(--primary);
+      border: 0.1rem black;
+  }
+  .chatroom-submit-message .send{
+      background: var(--secondary);
+      border: 0.2rem black;
+      color: black;
+  }
+  .collection .collection-item.active {
+    background-color:#0097a7 !important; 
+    opacity: 0.8;
+  }
