--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@
   }
   .chatroom {
     height: 50%;
-    width: 50%;
-    margin: 2% 20% 2% 20%;
+    width: 100%;
+    /* margin: 2% 20% 2% 20%; */
     padding: 5%;
     border-radius: 0.1em;
   }
@@ -58,4 +58,8 @@
   .collection .collection-item.active {
     background-color:#0097a7 !important; 
     opacity: 0.8;
+  }
+  .card{
+    max-width: 500px;
+    margin: auto;
   }
